@@ -29,8 +29,8 @@ use XoopsModules\Xsitemap\{
 /** @var Admin $adminObject */
 
 $moduleDirName = \basename(\dirname(__DIR__));
-require dirname(__DIR__, 3) . '/include/cp_header.php';
-require_once dirname(__DIR__) . '/include/common.php';
+require \dirname(__DIR__, 3) . '/include/cp_header.php';
+require_once \dirname(__DIR__) . '/include/common.php';
 $moduleDirName = \basename(\dirname(__DIR__));
 $helper        = Helper::getInstance();
 $adminObject = Admin::getInstance();
@@ -38,8 +38,8 @@ $adminObject = Admin::getInstance();
 //$pathIcon32    = \Xmf\Module\Admin::iconUrl('', 32);
 //$pathModIcon32 = $helper->getModule()->getInfo('modicons32');
 //if functions.php file exist
-//require_once  dirname(__DIR__) . '/include/functions.php';
-// require_once  dirname(__DIR__) . '/class/plugin.php';
+//require_once  \dirname(__DIR__) . '/include/functions.php';
+// require_once  \dirname(__DIR__) . '/class/plugin.php';
 // Load language files
 $helper->loadLanguage('admin');
 $helper->loadLanguage('modinfo');
