@@ -1,3 +1,8 @@
+<h5>1.56 Final [2021-08-06]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.8
+<hr>
+- PHP8, cosmetics (mamba)
+
+
 <h5>1.56 Beta 1 [2021-01-20]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
 <hr>
 - added where conditions for plugins (goffy)
